ENTMQBR-4024 By Default CLUSTER Mode is enabled even for a single broker Issue #71

--- a/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
@@ -219,6 +219,12 @@ spec:
             x-descriptors:
               - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
               - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: Whether broker is clustered
+            displayName: Clustered
+            path: deploymentPlan.clustered
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
 
           - description:  A single acceptor configuration
             displayName: Name
