--- a/deploy/crds/broker_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_activemqartemis_crd.yaml
@@ -562,6 +562,9 @@ spec:
                           type: array
                           items:
                             type: string
+                    clustered:
+                      description: whether the broker deployments are clustered or not
+                      type: boolean
                 upgrades:
                   description: >-
                     Specify the level of upgrade that should be allowed when an
