Issue #73 Allow broker pod/container to run with specific serviceAccount and runAsUser ENTMQBR-3620 AMQ Broker Operator should allow SCC/serviceAccount configuration

--- a/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
@@ -225,6 +225,18 @@ spec:
             x-descriptors:
               - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
               - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - description: ServiceAccount Name of the pod
+            displayName: ServiceAccount Name
+            path: deploymentPlan.podSecurity.serviceAccountName
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - description: runAsUser as defined in PodSecurityContext for the pod
+            displayName: RunAsUser
+            path: deploymentPlan.podSecurity.runAsUser
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:number'
 
           - description:  A single acceptor configuration
             displayName: Name
