--- a/deploy/olm-catalog/activemq-artemis-operator/0.20.0/broker_activemqartemis_crd.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.20.0/broker_activemqartemis_crd.yaml
@@ -558,13 +558,23 @@ spec:
                           items:
                             type: string
                         secrets:
-                          description: List of configmaps to mount
+                          description: List of secrets to mount
                           type: array
                           items:
                             type: string
                     clustered:
                       description: whether the broker deployments are clustered or not
                       type: boolean
+                    podSecurity:
+                      description: Security properties for broker pods
+                      type: object
+                      properties:
+                        serviceAccountName:
+                          description: serviceAccount Name of the pod
+                          type: string
+                        runAsUser:
+                          description: runAsUser as defined in PodSecurityContext
+                          type: integer
                 upgrades:
                   description: >-
                     Specify the level of upgrade that should be allowed when an
