--- a/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
@@ -237,6 +237,18 @@ spec:
             x-descriptors:
               - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
               - 'urn:alm:descriptor:com.tectonic.ui:number'
+          - description: Liveness Probe timeoutSeconds for broker container
+            displayName: TimeoutSeconds
+            path: deploymentPlan.livenessProbe.timeoutSeconds
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:number'
+          - description: Readiness Probe timeoutSeconds for broker container
+            displayName: TimeoutSeconds
+            path: deploymentPlan.readinessProbe.timeoutSeconds
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:number'
 
           - description:  A single acceptor configuration
             displayName: Name
