--- a/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
@@ -249,6 +249,12 @@ spec:
             x-descriptors:
               - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
               - 'urn:alm:descriptor:com.tectonic.ui:number'
+          - description: Whether or not to install the artemis metrics plugin
+            displayName: EnableMetricsPlugin
+            path: deploymentPlan.enableMetricsPlugin
+            x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:deploymentPlan'
+              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
 
           - description:  A single acceptor configuration
             displayName: Name
