ENTMQBR-3387 Configuration support for login modules, security settings and management access control. Issue #75

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -1,6 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
+  creationTimestamp: null
   name: activemq-artemis-operator
 rules:
 - apiGroups:
@@ -45,6 +46,7 @@ rules:
   - activemqartemisaddresses
   - activemqartemisscaledowns
   - activemqartemis
+  - activemqartemisauthentications
   verbs:
   - '*'
 - apiGroups:
