Fix: the address crd in olm-catalog is not sync with the one in deploy/crds Fix: wrong type defined in csv

--- a/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
@@ -279,7 +279,7 @@ spec:
             path: acceptors[0].protocols
             x-descriptors:
               - 'urn:alm:descriptor:com.tectonic.ui:fieldGroup:acceptors'
-              - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+              - 'urn:alm:descriptor:com.tectonic.ui:text'
           - description:  Whether or not to enable SSL on this port
             displayName: Ssl Enabled
             path: acceptors[0].sslEnabled
