Adding new versions of init and k8s images

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -48,10 +48,14 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.2
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2160
           value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.4
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2180
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.6
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.1
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2180
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.4
 
         image: quay.io/artemiscloud/activemq-artemis-operator:0.20.0
         imagePullPolicy: Always
